Fix lin-breaks in start-page

--- a/index.css
+++ b/index.css
@@ -108,7 +108,7 @@ a {
 /* Top-Headline */
 h1 {
     color: white;
-    background: url("assets/images/meOutside.webp") repeat scroll center center/cover;
+    background: url("assets/images/meOutside.webp") scroll center center/cover;
     height: 100vh;
     width: 100%;
     text-align: left;
@@ -116,7 +116,7 @@ h1 {
     flex-direction: column;
     margin-top: 0;
     margin-bottom: 30px;
-    text-indent: 5%;
+    padding-left: 5%;
     line-height: 110%;
     font-size: 40px;
     cursor: default;
